--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Fancy Candy</title>
     <link href="https://fonts.googleapis.com/css2?
     family=Bitter:wght@100&display=swap" rel="stylesheet">
-    <link href="https://yume-22.github.io/fancycandy/style.css" rel="stylesheet">
+    <link rel="stylesheet"href"https://yume-22.github.io/fancycandy/style.css"/>
   </head>
   <body id="index">
 
