--- a/1.html
+++ b/1.html
@@ -5,7 +5,7 @@
     <title>Fancy Candyとは</title>
     <link href="https://fonts.googleapis.com/css2?
     family=Bitter:wght@100&display=swap" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://yume-22.github.io/fancycandy/style.css"/>
   </head>
   <body id="1">
 
