--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class="logo">
       <a href="index.html">
-      <img src="images/logo.png" alt="Fancy Candy"></a>
+      <img src="images/logo1.png" alt="Fancy Candy"></a>
       </div>
       <nav>
         <ul class="global-nav">
