--- a/event.html
+++ b/event.html
@@ -8,7 +8,7 @@
     family=Bitter:wght@100&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body id="index">
+  <body id="event">
 
     <!-- header始まり-->
     <header>
@@ -29,12 +29,36 @@
     <!-- header終わり-->
 
     <!-- wrap始まり-->
-    <div id="wrap">
+    <div id="wrap" class="clearfix">
       <div class="content">
-        <h1>夢のような体験</h1>
-        <p>皆様の『したい』を実現します！
-          <br>※このWebサイトは、架空のアメ専門店です。</p>
-        <p class="btn"><a href="product.html">商品紹介</a></p>
+        <div class="main">
+          <h1>EVENT</h1>
+          <p>セール開催中</p>
+          <section>
+            <h2><a href="sale"><img src="images/sale.jpg"alt="sale"></a></h2>
+            <p>今の時期に合わせたセールを多数開催中！最大50％オフ<a href="sale.html">詳しく見る≫</a></p>
+          </section>
+          <section>
+            <h2><a href="want"><img src="images/want.jpg"alt="want"></a></h2>
+            <p>あなたの欲しいアメを実現します！
+            <a href="want.html">詳しく見る≫</a></p>
+          </section>
+        </div>
+        <aside class="sidebar">
+          <section>
+            <h2>SELE</h2>
+            <ul>
+              <li><a href="sale.html#rain">梅雨セール</a></li>
+              <li><a href="sale.html#father">父の日セール</a></li>
+            </ul>
+          </section>
+          <section>
+            <h2>WANT</h2>
+            <ul>
+              <li><a href="want.html#candy">応募ページ</a></li>
+            </ul>
+          </section>
+        </aside>
       </div>
     </div>
     <!-- wrap終わり-->
