--- a/news.html
+++ b/news.html
@@ -31,10 +31,14 @@
     <!-- wrap始まり-->
     <div id="wrap">
       <div class="content">
-        <h1>夢のような体験</h1>
-        <p>皆様の『したい』を実現します！
-          <br>※このWebサイトは、架空のアメ専門店です。</p>
-        <p class="btn"><a href="product.html">商品紹介</a></p>
+        <h1>夏季限定商品発売中</h1>
+        <p>今年の夏季限定商品が発売開始されました。
+          <br>暑くて辛いそんな夏を楽しめる涼しくておもしろいアメを販売しております！</p>
+        <p class="btn"><a href="2.html">商品紹介</a></p>
+        <h1>Fancy Candy公式サイトオープン</h1>
+        <p>Fancy Candy公式サイトがついに開設されました。定番の商品だけでなく
+        季節に合わせた商品も販売しております。実際にご購入されたお客様の声も
+        知ることができるので安心です！<br>これからよろしくお願いいたします。！！</p>
       </div>
     </div>
     <!-- wrap終わり-->
