--- a/product.html
+++ b/product.html
@@ -31,10 +31,10 @@
     <!-- wrap始まり-->
     <div id="wrap">
       <div class="content">
-        <h1>夢のような体験</h1>
-        <p>皆様の『したい』を実現します！
-          <br>※このWebサイトは、架空のアメ専門店です。</p>
-        <p class="btn"><a href="product.html">商品紹介</a></p>
+        <h1>定番商品</h1>
+        <p>感情などを一時的に変化させることのできるアメを多くとり揃えています。
+          ちょっとした休憩や友達と楽しみのにピッタリなものばかりです！</p>
+        <p class="btn"><a href="2.html">商品紹介</a></p>
       </div>
     </div>
     <!-- wrap終わり-->
