--- a/voice.html
+++ b/voice.html
@@ -34,7 +34,7 @@
         <h1>夢のような体験</h1>
         <p>皆様の『したい』を実現します！
           <br>※このWebサイトは、架空のアメ専門店です。</p>
-        <p class="btn"><a href="product.html">商品紹介</a></p>
+        <p class="btn"><a href="2.html">商品紹介</a></p>
       </div>
     </div>
     <!-- wrap終わり-->
