--- a/product.html
+++ b/product.html
@@ -8,13 +8,13 @@
     family=Bitter:wght@100&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body id="index">
+  <body id="product">
 
     <!-- header始まり-->
     <header>
       <div class="logo">
       <a href="index.html">
-      <img src="images/logo1.png" alt="Fancy Candy"></a>
+      <img src="images/logo.png" alt="Fancy Candy"></a>
       </div>
       <nav>
         <ul class="global-nav">
@@ -34,7 +34,18 @@
         <h1>定番商品</h1>
         <p>感情などを一時的に変化させることのできるアメを多くとり揃えています。
           ちょっとした休憩や友達と楽しみのにピッタリなものばかりです！</p>
-        <p class="btn"><a href="2.html">商品紹介</a></p>
+        <p class="btn"><a href="2.html">商品商品一覧</a></p>
+        <h1>特別商品</h1>
+        <p>少し高額なアメとなっておりますが、夢のような体験ができるものばかりです。
+          例えば、空を飛べたり、肌をモチモチにするアメもあります。
+          ぜひご賞味ください！</p>
+        <p class="btn"><a href="special.html">特別商品一覧</a></p>
+        <h1>期間限定商品</h1>
+        <p>季節やイベントに合わせた面白いアメを取り扱っています。
+          サンタクロース体験やおばけ体験など期間限定で販売しています。そのため、
+          大量生産しない商品もありますので、興味のあるものはすぐ購入されることを
+          お勧めします！</p>
+        <p class="btn"><a href="season.html">期間限定商品一覧</a></p>
       </div>
     </div>
     <!-- wrap終わり-->
