--- a/voice.html
+++ b/voice.html
@@ -8,13 +8,13 @@
     family=Bitter:wght@100&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body id="index">
+  <body id="voice">
 
     <!-- header始まり-->
     <header>
       <div class="logo">
       <a href="index.html">
-      <img src="images/logo1.png" alt="Fancy Candy"></a>
+      <img src="images/logo.png" alt="Fancy Candy"></a>
       </div>
       <nav>
         <ul class="global-nav">
