--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport:" content="width=device-width,initial-scale=1">
     <title>Fancy Candyとは</title>
-    <link href="https://fonts.googleapis.com/css2?
-    family=Bitter:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:
+    wght@300&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body id="about">
@@ -32,17 +32,17 @@
     <div id="wrap">
       <div class="content">
         <div class="main-center">
-          <h1>Fancy Candyとは</h1>
+          <h2 class="icon">Fancy Candyとは</h2>
           <p>みなさんは、アメにどのような印象をお持ちですか？
             <br>大阪のおばちゃんが配っていたり、会議の際に机に置かれていることを
             イメージする方は多いのではないでしょうか。<br>このようなちょっとした
             時間に食べることが多いと思います。<br>この時間をより楽しい時間にする
             アメを多く販売しています。</p>
-          <h1>当サイトについて</h1>
+          <h2 class="icon">当サイトについて</h2>
           <p>当サイトでは、架空のアメを販売しています。<br>架空ならではの夢のある
             商品を多く扱っています。<br>皆様がより楽しい日常を送ることを願ってい
             ます！</p>
-          <h1>商品へのこだわり</h1>
+          <h2 class="icon">商品へのこだわり</h2>
           <p>ピュアで健康な、本当に安心して楽しめる、そんな美味しいアメをお届け
             するため、1つ1つ手作業で作っています。作業場では、厳選された原料、
             最終製品に至るまで厳しい品質管理と味・外観のチェック、成分分析が
