--- a/product.html
+++ b/product.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport:" content="width=device-width,initial-scale=1">
     <title>Fancy Candy</title>
-    <link href="https://fonts.googleapis.com/css2?
-    family=Bitter:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:
+    wght@300&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body id="product">
@@ -34,7 +34,7 @@
         <h1>定番商品</h1>
         <p>感情などを一時的に変化させることのできるアメを多くとり揃えています。
           ちょっとした休憩や友達と楽しみのにピッタリなものばかりです！</p>
-        <p class="btn"><a href="2.html">商品商品一覧</a></p>
+        <p class="btn"><a href="classic.html">定番商品一覧</a></p>
         <h1>特別商品</h1>
         <p>少し高額なアメとなっておりますが、夢のような体験ができるものばかりです。
           例えば、空を飛べたり、肌をモチモチにするアメもあります。
