--- a/news.html
+++ b/news.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport:" content="width=device-width,initial-scale=1">
     <title>Fancy Candy</title>
-    <link href="https://fonts.googleapis.com/css2?
-    family=Bitter:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:
+    wght@300&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body id="product">
