--- a/classic.html
+++ b/classic.html
@@ -38,31 +38,32 @@
           <section id="1">
             <h2 class="icon">喜怒哀楽シリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><img src="images/1.png"alt=""></li>
-              <li><img src="images/2.png"alt=""></li>
-              <li><img src="images/3.png"alt=""></li>
-              <li><img src="images/1.png"alt=""></li>
-              <li><img src="images/2.png"alt=""></li>
+              <li><img src="images/red.png"alt=""></li>
+              <span>怒りアメ</span>
+              <li><img src="images/green.png"alt=""></li>
+              <li><img src="images/purple.png"alt=""></li>
+              <li><img src="images/orange.png"alt=""></li>
+              <li><img src="images/blue.png"alt=""></li>
             </ul>
           </section>
           <section id="2">
             <h2 class="icon">一休みシリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><img src="images/1.png"alt=""></li>
-              <li><img src="images/2.png"alt=""></li>
-              <li><img src="images/3.png"alt=""></li>
-              <li><img src="images/1.png"alt=""></li>
-              <li><img src="images/2.png"alt=""></li>
+              <li><img src="images/pink.png"alt=""></li>
+              <li><img src="images/green.png"alt=""></li>
+              <li><img src="images/blue.png"alt=""></li>
+              <li><img src="images/orange.png"alt=""></li>
+              <li><img src="images/red.png"alt=""></li>
             </ul>
           </section>
           <section id="3">
             <h2 class="icon">遊ぶシリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><img src="images/1.png"alt=""></li>
-              <li><img src="images/2.png"alt=""></li>
-              <li><img src="images/3.png"alt=""></li>
-              <li><img src="images/1.png"alt=""></li>
-              <li><img src="images/2.png"alt=""></li>
+              <li><img src="images/orange.png"alt=""></li>
+              <li><img src="images/purple.png"alt=""></li>
+              <li><img src="images/red.png"alt=""></li>
+              <li><img src="images/blue.png"alt=""></li>
+              <li><img src="images/pink.png"alt=""></li>
             </ul>
           </section>
         </div>
