--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
           <li><a href="event.html">イベント</a></li>
         </ul>
       </nav>
+      <div class="btn-trigger" id="btn">
+            <span></span>
+            <span></span>
+            <span></span>
+      </div>
     </header>
     <!-- header終わり-->
 
