--- a/jiman.html
+++ b/jiman.html
@@ -25,49 +25,17 @@
           <li><a href="event.html">イベント</a></li>
         </ul>
       </nav>
+      <div class="btn-trigger" id="btn">
+            <span></span>
+            <span></span>
+            <span></span>
+      </div>
     </header>
     <!-- header終わり-->
 
     <!-- wrap始まり-->
-    <div id="wrap" class="clearfix">
+    <div id="wrap">
       <div class="content">
-        <div class="main">
-          <h1>定番商品</h1>
-          <p>感情などを一時的に変化させることのできるアメを多くとり揃えています。
-            ちょっとした休憩や友達と楽しみのにピッタリなものばかりです！</p>
-          <section id="1">
-            <h2 class="icon">喜怒哀楽シリーズ</h2>
-            <ul class="clearfix classic-list">
-              <li><img src="images/red.png"alt=""></li>
-              <p class="btn2"><a href="jiman.html">自慢アメ</a></p>
-              <li><img src="images/green.png"alt=""></li>
-              <p class="btn2"><a href="jiman.html">怒りアメ</a></p>
-              <li><img src="images/purple.png"alt=""></li>
-              <li><img src="images/orange.png"alt=""></li>
-              <li><img src="images/blue.png"alt=""></li>
-            </ul>
-          </section>
-          <section id="2">
-            <h2 class="icon">一休みシリーズ</h2>
-            <ul class="clearfix classic-list">
-              <li><img src="images/pink.png"alt=""></li>
-              <li><img src="images/green.png"alt=""></li>
-              <li><img src="images/blue.png"alt=""></li>
-              <li><img src="images/orange.png"alt=""></li>
-              <li><img src="images/red.png"alt=""></li>
-            </ul>
-          </section>
-          <section id="3">
-            <h2 class="icon">遊ぶシリーズ</h2>
-            <ul class="clearfix classic-list">
-              <li><img src="images/orange.png"alt=""></li>
-              <li><img src="images/purple.png"alt=""></li>
-              <li><img src="images/red.png"alt=""></li>
-              <li><img src="images/blue.png"alt=""></li>
-              <li><img src="images/pink.png"alt=""></li>
-            </ul>
-          </section>
-        </div>
         <aside class="sidebar">
           <section>
             <h2>定番商品</h2>
@@ -94,6 +62,23 @@
             </ul>
           </section>
         </aside>
+        <div class="main-center">
+          <h1>自慢アメ</h1>
+          <section class="jiman clearfix">
+            <div class="jiman-txt">
+              <h2 class="icon">概要</h2>
+              <p>一番直近の自慢したい出来事を１つ勝手に話してしまいます。
+    アメのせいだといって、堂々と自慢できるチャンスですよ♪</p>
+              <h2 class="icon">注意事項</h2>
+              <p>効果時間は食べている間のみです。</p>
+              <h2 class="icon">値段</h2>
+              <p>10個入り：120円</p>
+            </div>
+            <img src="images/pink.png" alt="自慢アメ"class="jiman-image">
+            <p class="btn"><a href="buy.html">購入</a></p>
+          </section>
+        </div>
+        <p class="btn3"><a href="product.html">＜戻る＞</a></p>
       </div>
     </div>
     <!-- wrap終わり-->
@@ -103,6 +88,7 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
+
 
 
   </body>
