--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@
     wght@300&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body id="product">
+  <body id="about">
 
     <!-- header始まり-->
     <header>
@@ -48,6 +48,8 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
+
+
 
   </body>
 </html>
