--- a/index.html
+++ b/index.html
@@ -8,38 +8,20 @@
     wght@300&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body id="index">
+  <body id="top">
 
     <!-- header始まり-->
     <header>
-      <div class="logo">
-      <a href="index.html">
-      <img src="images/logo.png" alt="Fancy Candy"></a>
-      </div>
-      <nav>
-        <ul class="global-nav">
-          <li><a href="about.html">Fancy Candyとは</a></li>
-          <li><a href="product.html">商品紹介</a></li>
-          <li><a href="news.html">ニュース</a></li>
-          <li><a href="voice.html">お客様の声</a></li>
-          <li><a href="event.html">イベント</a></li>
-        </ul>
-      </nav>
-      <div class="btn-trigger" id="btn">
-            <span></span>
-            <span></span>
-            <span></span>
-      </div>
+
     </header>
     <!-- header終わり-->
 
     <!-- wrap始まり-->
     <div id="wrap">
       <div class="content">
-        <h1>夢のような体験</h1>
-        <p>皆様の『したい』を実現します！
-          <br>※このWebサイトは、架空のアメ専門店です。</p>
-        <p class="btn"><a href="product.html">商品紹介</a></p>
+        <h1>当Webサイトは、架空のアメ専門店です。</h1>
+        <p>実際の販売は行っておらず、架空のものとして楽しで頂けたらと思います。</p>
+        <p class="btn"><a href="top.html">Fancy Candy</a></p>
       </div>
     </div>
     <!-- wrap終わり-->
@@ -49,6 +31,12 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
+
+    <!-- javascript始まり -->
+    <script src="https://cdn.jsdelivr.net/npm/bubbly-bg@1.0.0/dist/bubbly-bg.js"></script>
+    <script>bubbly();</script>
+
+    <!-- javascript終わり -->
 
   </body>
 </html>
