--- a/top.html
+++ b/top.html
@@ -3,25 +3,45 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport:" content="width=device-width,initial-scale=1">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="menu.js" defer></script>
     <title>Fancy Candy</title>
     <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:
     wght@300&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body id="top">
+  <body id="index">
 
     <!-- header始まり-->
     <header>
-
+      <div class="logo">
+      <a href="index.html">
+      <img src="images/logo.png" alt="Fancy Candy"></a>
+      </div>
+      <nav>
+        <ul class="global-nav">
+          <li><a href="about.html">Fancy Candyとは</a></li>
+          <li><a href="product.html">商品紹介</a></li>
+          <li><a href="news.html">ニュース</a></li>
+          <li><a href="voice.html">お客様の声</a></li>
+          <li><a href="event.html">イベント</a></li>
+        </ul>
+      </nav>
+      <div class="btn-trigger" id="btn">
+            <span></span>
+            <span></span>
+            <span></span>
+      </div>
     </header>
     <!-- header終わり-->
 
     <!-- wrap始まり-->
     <div id="wrap">
       <div class="content">
-        <h1>当Webサイトは、架空のアメ専門店です。</h1>
-        <p>実際の販売は行っておらず、架空のものとして楽しで頂けたらと思います。</p>
-        <p class="btn"><a href="index.html">Fancy Candy</a></p>
+        <h1>夢のような体験</h1>
+        <p>皆様の『したい』を実現します！
+          <br>※このWebサイトは、架空のアメ専門店です。</p>
+        <p class="btn"><a href="product.html">商品紹介</a></p>
       </div>
     </div>
     <!-- wrap終わり-->
@@ -31,12 +51,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-    <!-- javascript始まり -->
-    <script src="https://cdn.jsdelivr.net/npm/bubbly-bg@1.0.0/dist/bubbly-bg.js"></script>
-    <script>bubbly();</script>
-
-    <!-- javascript終わり -->
 
   </body>
 </html>
