--- a/classic.html
+++ b/classic.html
@@ -38,33 +38,46 @@
           <section id="1">
             <h2 class="icon">喜怒哀楽シリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><img src="images/red.png"alt=""></li>
-              <p class="btn2"><a href="jiman.html">自慢アメ</a></p>
-              <li><img src="images/green.png"alt=""></li>
-              <p class="btn2"><a href="jiman.html">怒りアメ</a></p>
-              <li><img src="images/purple.png"alt=""></li>
-              <li><img src="images/orange.png"alt=""></li>
-              <li><img src="images/blue.png"alt=""></li>
+              <li><a href="jiman.html"><img src="images/pink.png"alt="">
+              <p class="btn2">自慢アメ</a></p></li>
+              <li><a href="angry.html"><img src="images/red.png"alt="">
+              <p class="btn2">怒りアメ</a></p></li>
+              <li><a href="cry.html"><img src="images/purple.png"alt="">
+              <p class="btn2">涙アメ</a></p></li>
+              <li><a href="cry.html"><img src="images/orange.png"alt="">
+              <p class="btn2">笑いアメ</a></p></li>
+              <li><a href="cry.html"><img src="images/blue.png"alt="">
+              <p class="btn2">涙アメ</a></p></li>
             </ul>
           </section>
           <section id="2">
             <h2 class="icon">一休みシリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><img src="images/pink.png"alt=""></li>
-              <li><img src="images/green.png"alt=""></li>
-              <li><img src="images/blue.png"alt=""></li>
-              <li><img src="images/orange.png"alt=""></li>
-              <li><img src="images/red.png"alt=""></li>
+              <li><a href="sleep.html"><img src="images/pink.png"alt="">
+              <p class="btn2">眠りアメ</a></p></li>
+              <li><a href="cry.html"><img src="images/green.png"alt="">
+              <p class="btn2">元気アメ</a></p></li>
+              <li><a href="cry.html"><img src="images/blue.png"alt="">
+              <p class="btn2">リフレッシュアメ</a></p></li>
+              <li><a href="cry.html"><img src="images/orange.png"alt="">
+              <p class="btn2">涙アメ</a></p></li>
+              <li><a href="cry.html"><img src="images/red.png"alt="">
+              <p class="btn2">涙アメ</a></p></li>
             </ul>
           </section>
           <section id="3">
             <h2 class="icon">遊ぶシリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><img src="images/orange.png"alt=""></li>
-              <li><img src="images/purple.png"alt=""></li>
-              <li><img src="images/red.png"alt=""></li>
-              <li><img src="images/blue.png"alt=""></li>
-              <li><img src="images/pink.png"alt=""></li>
+              <li><a href="cry.html"><img src="images/orange.png"alt="">
+              <p class="btn2">ポジティブアメ</a></p></li>
+              <li><a href="cry.html"><img src="images/purple.png"alt="">
+              <p class="btn2">ネガティブアメ</a></p></li>
+              <li><a href="cry.html"><img src="images/red.png"alt="">
+              <p class="btn2">涙アメ</a></p></li>
+              <li><a href="cry.html"><img src="images/blue.png"alt="">
+              <p class="btn2">涙アメ</a></p></li>
+              <li><a href="cry.html"><img src="images/pink.png"alt="">
+              <p class="btn2">涙アメ</a></p></li>
             </ul>
           </section>
         </div>
