--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
     </footer>
     <!-- footer終わり-->
 
-    <!-- javascript始まり -->
+    <!-- javascript始まり
     <script src="https://cdn.jsdelivr.net/npm/bubbly-bg@1.0.0/dist/bubbly-bg.js"></script>
     <script>bubbly();</script>
+     -->
 
     <!-- javascript終わり -->
 
