--- a/season.html
+++ b/season.html
@@ -38,35 +38,48 @@
             大量生産しない商品もありますので、興味のあるものはすぐ購入されることを
             お勧めします！</p>
           <section id="1">
-            <h2 class="icon">ハロウィンシリーズ</h2>
+            <h2 class="icon">梅雨シリーズ</h2>
             <ul class="clearfix classic-list">
               <li><a href="jiman.html"><img src="images/red.png"alt="">
-              <p class="btn2">おばけアメ</a></p></li>
+              <p class="btn2">カッパアメ</a></p></li>
               <li><a href="jiman.html"><img src="images/green.png"alt="">
-              <p class="btn2">いたづらアメ</a></p></li>
-              <li><img src="images/purple.png"alt=""></li>
-              <li><img src="images/orange.png"alt=""></li>
-              <li><img src="images/blue.png"alt=""></li>
+              <p class="btn2">虹アメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/purple.png"alt="">
+              <p class="btn2">おばけアメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/orange.png"alt="">
+              <p class="btn2">おばけアメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/blue.png"alt="">
+              <p class="btn2">おばけアメ</a></p></li>
             </ul>
           </section>
           <section id="2">
-            <h2 class="icon">一休みシリーズ</h2>
+            <h2 class="icon">夏休みシリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><img src="images/pink.png"alt=""></li>
-              <li><img src="images/green.png"alt=""></li>
-              <li><img src="images/blue.png"alt=""></li>
-              <li><img src="images/orange.png"alt=""></li>
-              <li><img src="images/red.png"alt=""></li>
+              <li><a href="jiman.html"><img src="images/pink.png"alt="">
+              <p class="btn2">おばけアメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/green.png"alt="">
+              <p class="btn2">おばけアメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/blue.png"alt="">
+              <p class="btn2">おばけアメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/orange.png"alt="">
+              <p class="btn2">おばけアメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/red.png"alt="">
+              <p class="btn2">おばけアメ</a></p></li>
             </ul>
           </section>
           <section id="3">
-            <h2 class="icon">遊ぶシリーズ</h2>
+            <h2 class="icon">ハロウィンシリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><img src="images/orange.png"alt=""></li>
-              <li><img src="images/purple.png"alt=""></li>
-              <li><img src="images/red.png"alt=""></li>
-              <li><img src="images/blue.png"alt=""></li>
-              <li><img src="images/pink.png"alt=""></li>
+              <li><a href="jiman.html"><img src="images/orange.png"alt="">
+              <p class="btn2">おばけアメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/purple.png"alt="">
+              <p class="btn2">いたづらアメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/red.png"alt="">
+              <p class="btn2">おばけアメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/blue.png"alt="">
+              <p class="btn2">おばけアメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/pink.png"alt="">
+              <p class="btn2">おばけアメ</a></p></li>
             </ul>
           </section>
         </div>
