--- a/special.html
+++ b/special.html
@@ -37,35 +37,48 @@
             例えば、空を飛べたり、肌をモチモチにするアメもあります。
             ぜひご賞味ください！</p>
           <section id="1">
-            <h2 class="icon">喜怒哀楽シリーズ</h2>
+            <h2 class="icon">夢シリーズ</h2>
             <ul class="clearfix classic-list">
               <li><a href="jiman.html"><img src="images/red.png"alt="">
-              <p class="btn2">自慢アメ</a></p></li>
+              <p class="btn2">透明アメ</a></p></li>
               <li><a href="jiman.html"><img src="images/green.png"alt="">
-              <p class="btn2">怒りアメ</a></p></li>
-              <li><img src="images/purple.png"alt=""></li>
-              <li><img src="images/orange.png"alt=""></li>
-              <li><img src="images/blue.png"alt=""></li>
+              <p class="btn2">瞬間移動アメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/purple.png"alt="">
+              <p class="btn2">麻酔アメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/orange.png"alt="">
+              <p class="btn2">飛行アメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/blue.png"alt="">
+              <p class="btn2">恋アメ</a></p></li>
             </ul>
           </section>
           <section id="2">
-            <h2 class="icon">一休みシリーズ</h2>
+            <h2 class="icon">スキンケアシリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><img src="images/pink.png"alt=""></li>
-              <li><img src="images/green.png"alt=""></li>
-              <li><img src="images/blue.png"alt=""></li>
-              <li><img src="images/orange.png"alt=""></li>
-              <li><img src="images/red.png"alt=""></li>
+              <li><a href="jiman.html"><img src="images/pink.png"alt="">
+              <p class="btn2">美容アメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/green.png"alt="">
+              <p class="btn2">満腹アメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/blue.png"alt="">
+              <p class="btn2">エステアメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/orange.png"alt="">
+              <p class="btn2">変身アメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/red.png"alt="">
+              <p class="btn2">自慢アメ</a></p></li>
             </ul>
           </section>
           <section id="3">
-            <h2 class="icon">遊ぶシリーズ</h2>
+            <h2 class="icon">勉強シリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><img src="images/orange.png"alt=""></li>
-              <li><img src="images/purple.png"alt=""></li>
-              <li><img src="images/red.png"alt=""></li>
-              <li><img src="images/blue.png"alt=""></li>
-              <li><img src="images/pink.png"alt=""></li>
+              <li><a href="jiman.html"><img src="images/orange.png"alt="">
+              <p class="btn2">記憶力upアメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/purple.png"alt="">
+              <p class="btn2">言語完璧アメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/red.png"alt="">
+              <p class="btn2">動物言語理解アメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/blue.png"alt="">
+              <p class="btn2">自慢アメ</a></p></li>
+              <li><a href="jiman.html"><img src="images/pink.png"alt="">
+              <p class="btn2">自慢アメ</a></p></li>
             </ul>
           </section>
         </div>
