--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport:" content="width=device-width,initial-scale=1">
     <title>Fancy Candyとは</title>
-    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:
-    wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap"
+     rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body id="about">
@@ -13,7 +13,7 @@
     <!-- header始まり-->
     <header>
       <div class="logo">
-      <a href="index.html">
+      <a href="top.html">
       <img src="images/logo.png" alt="Fancy Candy"></a>
       </div>
       <nav>
