--- a/index.html
+++ b/index.html
@@ -4,38 +4,24 @@
     <meta charset="utf-8">
     <meta name="viewport:" content="width=device-width,initial-scale=1">
     <title>Fancy Candy</title>
-    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:
-    wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap"
+     rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body id="top">
+  <body id="index">
 
     <!-- header始まり-->
     <header>
-
+      <h1>当Webサイトは、架空のアメ専門店です。</h1>
+      <p>実際の販売は行っておらず、架空のものとして楽しで頂けたらと思います。</p>
+      <p class="btn"><a href="top.html">Fancy Candy</a></p>
     </header>
     <!-- header終わり-->
 
-    <!-- wrap始まり-->
-    <div id="wrap">
-      <div class="content">
-        <h1>当Webサイトは、架空のアメ専門店です。</h1>
-        <p>実際の販売は行っておらず、架空のものとして楽しで頂けたらと思います。</p>
-        <p class="btn"><a href="top.html">Fancy Candy</a></p>
-      </div>
-    </div>
-    <!-- wrap終わり-->
-
-    <!-- footer始まり-->
-    <footer>
-      <small>(C)2021 Candy-studio.</small>
-    </footer>
-    <!-- footer終わり-->
-
-    <!-- javascript始まり
+    <!-- javascript始まり -->
+    <canvas class="background"></canvas>
     <script src="https://cdn.jsdelivr.net/npm/bubbly-bg@1.0.0/dist/bubbly-bg.js"></script>
     <script>bubbly();</script>
-     -->
 
     <!-- javascript終わり -->
 
