--- a/top.html
+++ b/top.html
@@ -5,17 +5,17 @@
     <meta name="viewport:" content="width=device-width,initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="menu.js" defer></script>
-    <title>Fancy Candy</title>
-    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:
-    wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap"
+     rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <title>Fancy Candy</title>
   </head>
-  <body id="index">
+  <body id="top">
 
     <!-- header始まり-->
     <header>
       <div class="logo">
-      <a href="index.html">
+      <a href="top.html">
       <img src="images/logo.png" alt="Fancy Candy"></a>
       </div>
       <nav>
